[gd_scene load_steps=14 format=3 uid="uid://b5vcatxkos4a3"]

[ext_resource type="Script" uid="uid://djbh6v6e8b7nd" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/NewTallyModal/new_tally_modal.gd" id="1_o0y4m"]
[ext_resource type="Texture2D" uid="uid://ch8kmv3c7uul0" path="res://Media/images/Defaults/redacted.png" id="2_tlry5"]
[ext_resource type="LabelSettings" uid="uid://bnryvwswipkov" path="res://Fonts/font_2_32_white.tres" id="3_8ekbd"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="4_8ekbd"]
[ext_resource type="PackedScene" uid="uid://boqoftsfla8vk" path="res://Components/CostPanel/CostPanel.tscn" id="5_gug6l"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="9_0536k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_75o2t"]

[sub_resource type="Shader" id="Shader_kq5a2"]
code = "shader_type canvas_item;

uniform float blur_radius : hint_range(0.0, 20.0) = 6.0;
uniform vec2 blur_direction = vec2(1.0, 0.0); // Set per pass

void fragment() {
    vec2 texel_size = 1.0 / vec2(textureSize(TEXTURE, 0));
    vec2 direction = normalize(blur_direction) * texel_size * blur_radius;

    float weights[5] = float[](0.227027, 0.1945946, 0.1216216, 0.054054, 0.016216);

    vec4 color = texture(TEXTURE, UV) * weights[0];

    for (int i = 1; i < 5; i++) {
        vec2 offset = direction * float(i);
        color += texture(TEXTURE, UV + offset) * weights[i];
        color += texture(TEXTURE, UV - offset) * weights[i];
    }

    COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t4xaw"]
shader = SubResource("Shader_kq5a2")
shader_parameter/blur_radius = 3.715
shader_parameter/blur_direction = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kq5a2"]

[sub_resource type="LabelSettings" id="LabelSettings_r38dr"]
font = ExtResource("4_8ekbd")
font_color = Color(0.297318, 0.859883, 0, 1)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t4xaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ekbd"]

[node name="NewTallyModal" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_75o2t")
script = ExtResource("1_o0y4m")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_t4xaw")
layout_mode = 2

[node name="ColorRectBG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.124083, 0.124083, 0.124083, 0.796078)

[node name="ModalControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ModalControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_kq5a2")

[node name="MarginContainer2" type="MarginContainer" parent="ModalControl/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ModalControl/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ImageTextureRect" type="TextureRect" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
texture = ExtResource("2_tlry5")
expand_mode = 1
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "TITLE"
label_settings = ExtResource("3_8ekbd")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SubLabel" type="Label" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "SUBTITLE"
label_settings = SubResource("LabelSettings_r38dr")
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="ResourceControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ResourceControl"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_t4xaw")

[node name="MarginContainer" type="MarginContainer" parent="ResourceControl/PanelContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 250

[node name="PanelContainer" type="PanelContainer" parent="ResourceControl/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_8ekbd")

[node name="MarginContainer" type="MarginContainer" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CostPanel" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("5_gug6l")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
title = "MONEY"

[node name="DiffLabel" type="Label" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "+200"
label_settings = ExtResource("3_8ekbd")
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CostPanel" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("5_gug6l")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
icon = 44
title = "RESEARCH"

[node name="DiffLabel" type="Label" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "+200"
label_settings = ExtResource("3_8ekbd")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CostPanel" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("5_gug6l")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
icon = 40
title = "MATERIAL"

[node name="DiffLabel" type="Label" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "+200"
label_settings = ExtResource("3_8ekbd")
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CostPanel" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer4" instance=ExtResource("5_gug6l")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
icon = 39
title = "CORE"

[node name="DiffLabel" type="Label" parent="ResourceControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "+200"
label_settings = ExtResource("3_8ekbd")
horizontal_alignment = 1

[node name="BtnControls" parent="." instance=ExtResource("9_0536k")]
layout_mode = 2
a_btn_title = "COLLECT"
b_btn_title = ""
hide_b_btn = true
c_btn_title = ""
c_btn_icon = 14
